[package]

name = "rebar"
description = "A line editor built from scratch in Rust"
homepage = "github.com/cyborgsphinx/rebar"
repository = "github.com/cyborgsphinx/rebar"
readme = "README.md"
keywords = ["shell", "term"]
license = "MIT"
version = "0.0.1"
authors = ["James Hannah <jhannah8124@gmail.com>"]

[dependencies]

term = "*"
